--- a/src/app/manager/manager.component.html
+++ b/src/app/manager/manager.component.html
@@ -1,1 +1,27 @@
-<p>manager works!</p>
+<div class="limiter">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark mr-auto">
+             <a class="navbar-brand" href="#"><img src="https://s3.amazonaws.com/myamcatimages/company/images/8527.png"
+                 height="50px" /></a>
+             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"
+               aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+               <span class="navbar-toggler-icon"></span>
+             </button>
+           
+             <div class="collapse navbar-collapse offset-md-10" id="navbarTogglerDemo02">
+               <a routerLink="/home" class="btn btn-warning" style="margin-left: 1300px"><b>Logout</b></a>
+             </div>
+           </nav>
+     <div class="container-login100" style="background-image: url('assets/images/bg.jpg');">
+      <br/>
+           
+           <div class="col-md-4 offset-md-4" style="margin-top: -400px">
+             <h5 class="text-center"><img src="https://s3.amazonaws.com/myamcatimages/company/images/8527.png" height="50px" />
+             </h5>
+             <hr />
+             <h3 class="text-center">Hello, <span style="color: #1d62a7;">Manager</span></h3>
+             <h3 class="text-center">Welcome back!</h3>
+             <br />
+           </div>
+     </div>
+ </div>
+ 
