--- a/src/app/team/team.component.html
+++ b/src/app/team/team.component.html
@@ -2,12 +2,12 @@
     <div class="container-login100" style="background-image: url('assets/images/bg.jpg');">
         <div class="wrap-login100">
             <form class="login100-form validate-form" [formGroup]="form" (ngSubmit)="onSubmit()">
-                    <h6 class="text-center"><b *ngIf="val" style="color: rgb(146, 11, 22)">Invalid Login Credentials</b></h6><br><br>
+                    <h6 class="text-center"><b *ngIf="val" style="color: rgb(146, 11, 22)">Invalid Login Credentials</b></h6>
+                    <h6 class="text-center"><b *ngIf="val1" style="color: rgb(146, 11, 22)">Enter username and password</b></h6><br><br>
                 <span class="login100-form-logo">
                     <img src="https://s3.amazonaws.com/myamcatimages/company/images/8527.png" width="100px"/>
                 </span>
                 <br/><br/>
-
                 <div class="wrap-input100 validate-input" data-validate = "Enter username">
                     <input class="input100" type="text" formControlName="uname" placeholder="Username" [ngClass]="{ 'is-invalid': submitted && f.uname.errors }">
                     <span class="focus-input100" data-placeholder="&#xf207;"></span>
@@ -27,11 +27,8 @@
                         Login
                     </button>
                 </div>
-
             </form><br/>
             <h6 style="color: white">New User? <a routerLink="/reg" style="color: white">Create new account</a></h6>
-            
-           
         </div>
     </div>
 </div>
