--- a/src/app/employee/employee.component.html
+++ b/src/app/employee/employee.component.html
@@ -1,7 +1,7 @@
 <div class="limiter">
        <nav class="navbar navbar-expand-lg navbar-dark bg-dark mr-auto">
             <a class="navbar-brand" href="#"><img src="https://s3.amazonaws.com/myamcatimages/company/images/8527.png"
-                height="50px" /></a>  
+                height="50px" /></a> <h2 style="color: coral">Employee</h2> 
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"
               aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
@@ -20,7 +20,7 @@
             <hr />
             <div class="row">
              <div class="col-3">
-                <img src="https://icons.iconarchive.com/icons/aha-soft/people/256/engineer-icon.png" width="200px"/>
+                <img src="https://lh3.googleusercontent.com/proxy/tP29ErX-dYGmJNc82wKAu7qtlhtiL3R9UN6JWGIr07CnPlUrIgcaUW6mjERc3YEeCVp313xCk_kJgE-xG_41URUbu5JQWkkl9MNhlKCFihWIR0LK2Q9vI_w6LOfHC1Pe65kDeBMpBTGSXTEFjPRIAczq-c9WOFMZkCZ2NNYGpQTnMbqJ83sBiADKcU_A3A" width="250px"/>
              </div>
              <div class="col-6">
                 <div style="margin-top: 75px"><h3 class="text-center">Hello, <span style="color: #1d62a7;">{{fname}}</span></h3>
