--- a/src/app/manager/manager.component.html
+++ b/src/app/manager/manager.component.html
@@ -1,7 +1,7 @@
 <div class="limiter">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark mr-auto">
          <a class="navbar-brand" href="#"><img src="https://s3.amazonaws.com/myamcatimages/company/images/8527.png"
-             height="50px" /></a><h2 style="color: coral">Admin</h2>
+             height="50px" /></a> <h2 style="color: coral">Manager</h2> 
          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"
            aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
            <span class="navbar-toggler-icon"></span>
@@ -14,14 +14,20 @@
  <div class="container-login100" style="background-image: url('assets/images/bg.jpg');">
   <br/>
        
-       <div class="col-md-4 offset-md-4" style="margin-top: -400px">
+       <div class="col-md-8 offset-md-4" style="margin-top: -300px">
          <h5 class="text-center"><img src="https://s3.amazonaws.com/myamcatimages/company/images/8527.png" height="50px" />
          </h5>
          <hr />
-         <h3 class="text-center">Hello, <span style="color: #1d62a7;">Admin</span></h3>
-         <h3 class="text-center">Welcome back!</h3>
-         <br />
+         <div class="row">
+          <div class="col-3">
+             <img src="https://cdn4.iconfinder.com/data/icons/business-cartoon-4/512/g22054-512.png" width="250px"/>
+          </div>
+          <div class="col-6">
+             <div style="margin-top: 75px"><h3 class="text-center">Hello, <span style="color: #1d62a7;">{{fname}}</span></h3>
+             <h3 class="text-center">Welcome back!</h3></div>
+          </div>
+         </div>
+        
        </div>
  </div>
 </div>
-
