--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -6,22 +6,83 @@
            aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
            <span class="navbar-toggler-icon"></span>
          </button>
-       
          <div class="collapse navbar-collapse offset-md-10" id="navbarTogglerDemo02">
            <a class="btn btn-warning" style="margin-left: 1100px" *ngIf="s.isLoggedIn()" (click)="s.logout()"><b>Logout</b></a>
          </div>
        </nav>
  <div class="container-login100" style="background-image: url('assets/images/bg.jpg');">
-  <br/>
-       
-       <div class="col-md-4 offset-md-4" style="margin-top: -400px">
+  <br/> 
+       <div>
          <h5 class="text-center"><img src="https://s3.amazonaws.com/myamcatimages/company/images/8527.png" height="50px" />
          </h5>
          <hr />
          <h3 class="text-center">Hello, <span style="color: #1d62a7;">Admin</span></h3>
          <h3 class="text-center">Welcome back!</h3>
-         <br />
+         <br/>
+         <hr/>
+         <br/><br/>
+         <div class="row">
+           <div class="col-6">
+              <h4 class="text-center"><b style="color: #1d62a7;">Managers Details</b></h4><br/>
+              <table class="table table-bordered">
+               <thead>
+                 <tr>
+                   <th scope="col">Sno</th>
+                   <th scope="col">Name</th>
+                   <th scope="col">Email</th>
+                   <th scope="col">Actions</th>
+                 </tr>
+               </thead>
+               <tbody>
+                 <tr *ngFor="let t of arow; let i=index;">
+                   <td>{{i +1}}</td>
+                   <td>{{t.uname}}</td>
+                   <td>{{t.email}}</td>
+                   <td><button type="submit" (click)="del(d)" class="btn btn-primary">Delete</button></td>
+                 </tr>    
+               </tbody>
+             </table>
+           </div>
+           <div class="col-6">
+              <h4 class="text-center"><b style="color: #1d62a7;">Teamleads Details</b></h4><br/>
+              <table class="table table-bordered">
+               <thead>
+                 <tr>
+                   <th scope="col">Sno</th>
+                   <th scope="col">Name</th>
+                   <th scope="col">Email</th>
+                 </tr>
+               </thead>
+               <tbody>
+                 <tr *ngFor="let t of trow; let i=index;">
+                   <td>{{i +1}}</td>
+                   <td>{{t.uname}}</td>
+                   <td>{{t.email}}</td>
+                 </tr>    
+               </tbody>
+             </table>
+           </div>
+           <div class="col-12">
+              <h4 class="text-center"><b style="color: #1d62a7;">Employees Details</b></h4><br/>
+              <table class="table table-bordered">
+               <thead>
+                 <tr>
+                   <th scope="col">Sno</th>
+                   <th scope="col">Name</th>
+                   <th scope="col">Email</th>
+                 </tr>
+               </thead>
+               <tbody>
+                 <tr *ngFor="let t of erow; let i=index;">
+                   <td>{{i +1}}</td>
+                   <td>{{t.uname}}</td>
+                   <td>{{t.email}}</td>
+                 </tr>    
+               </tbody>
+             </table>
+           </div>
        </div>
+       </div>  
  </div>
 </div>
 
